# game-engine

./: .gitignore  Actor.cpp  Actor.hpp  AniSpriteComponent.hpp  AnimSpriteComponent.cpp  BGSpriteComponent.cpp  CMakeLists.txt  Component.cpp  Component.hpp  Dependency.cmake  Game.cpp  Game.hpp  GameProgramming.sln  GameProgramming.vcxproj  GameProgramming.vcxproj.filters  LICENSE  Math.cpp  README.md  Ship.cpp  Ship.hpp  ShipGame.cpp  ShipGame.hpp  Simple.vert  SpriteComponent.cpp  SpriteComponent.hpp  Vector.hpp  main.cpp
example/: 3dGame.cpp  3dGame.hpp  Asteroid.cpp  Asteroid.hpp  AsteroidGame.cpp  AsteroidGame.hpp  Ship.cpp  Ship2.cpp  Ship2.hpp  ShipGame.cpp  ShipGame.hpp  openglGame.cpp  openglGame.hpp
src/: Actor.cpp  Actor.hpp  AniSpriteComponent.cpp  AnimSpriteComponent.cpp  AnimSpriteComponent.hpp  BGSpriteComponent.cpp  BGSpriteComponent.hpp  CameraActor.cpp  CameraActor.hpp  CameraComponent.cpp  CameraComponent.hpp  CircleComponent.cpp  CircleComponent.hpp  Common.hpp  Component.cpp  Component.hpp  FPSActor.cpp  FPSActor.hpp  FPSCamera.cpp  FPSCamera.hpp  FPSModel.cpp  FPSModel.hpp  FollowActor.cpp  FollowActor.hpp  FollowCamera.cpp  FollowCamera.hpp  Format.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GBuffer.cpp  GBuffer.hpp  Game.cpp  Game.hpp  Image.cpp  Image.hpp  InputComponent.cpp  InputComponent.hpp  Laser.cpp  Laser.hpp  LightComponent.cpp  (+40 more)
src/shader/: Basic.frag  Basic.vert  BlinPhong.frag  BlinnPhong.frag  Depth.frag  Depth.vert  GBuffer.frag  GBufferGlobal.frag  GBufferGlobal.vert  GBufferPointLight.frag  GBufferPointLight.vert  Phong.frag  SSAO.frag  (+8 more)
